<resources>
    <string name="SAR_A_attending_txtview">SAR A</string>
    <string name="SAR_N_dialog_title">Are you sure you\'re unavailable?</string>
    <string name="activation_notification_title_template">SARCALL Activated</string>
    <string name="alarm_button_stop">Stop Alarm</string>
    <string name="alarm_screen_title">SARCALL</string>
    <string name="app_name">SARCALL Alarm</string>
    <string name="appwidget_text">SARCALL</string>
    <string name="notification_alarm_channel_id">Alarm Trigger Full Screen</string>
    <string name="placeholder_text">{PLACEHOLDER TEXT}</string>
    <string name="pref_enabled_summary">Enable or disable the SMS alarm.\nThis will NOT enable no rules are configured.</string>
    <string name="pref_enabled_title">SARCALL Alarm ON/OFF</string>
    <string name="respond_received_sarcall_sms_heading">Latest SARCALL SMS</string>
    <string name="response_attending_button">SAR A</string>
    <string name="response_date_received">Date Received</string>
    <string name="response_late_button">SAR L</string>
    <string name="response_no_messages_placeholder">No messages</string>
    <string name="response_permission_placeholder">Permission not granted!</string>
    <string name="response_unavailable_button">SAR N</string>
    <string name="sar_a_response_message_editview">Optional: For example, \"On my way.\"</string>
    <string name="sar_a_response_message_title">Custom Message:</string>
    <string name="sar_a_response_rv_txt_placeholder">Estimated time to RV:</string>
    <string name="sar_a_seek_bar_high_time">45m</string>
    <string name="sar_a_seek_bar_low_time">0m</string>
    <string name="sar_a_send_button">Send</string>
    <string name="sar_l_response_custom_message_title">Custom Message:</string>
    <string name="sar_l_response_message_hint">Optional: For example, \"On my way.\"</string>
    <string name="sar_l_response_seek_bar_high_time">120m</string>
    <string name="sar_l_response_seek_bar_title">Estimated time to RV:</string>
    <string name="sar_l_response_send_button">Send</string>
    <string name="sar_l_response_title">SAR L</string>
    <string name="sar_l_seek_bar_low_time">N/A</string>
    <string name="sar_n_negitive">Take me back</string>
    <string name="sar_n_positive">I\'m sure</string>
    <string name="setup_needed">No rules configured in settings</string>
    <string name="setup_summery_text">In order for the app to work correctly, please allow the app to access incoming SMS messages and access to device storage.\nYou\'ll may be asked to disable battery optimisation for this app. This is to allow SMS messages to be detected at all times. Don\'t worry, this app is very lightweight and it will not drain your battery.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>