<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/respond_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/InfoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/error"
                app:cornerRadius="4.0dip">

                <TextView
                    android:id="@+id/InfoView_txtview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="16.0dip"
                    android:text="SARCALL Alarm not enabled. Tap to go to settings."
                    android:textColor="#ffffffff" />
            </RelativeLayout>
        </GridLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/respond_sms_preview_cardview"
            android:layout_width="match_parent"
            android:layout_height="200.0dip"
            android:layout_marginStart="8.0dip"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="8.0dip"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="8.0dip"
            app:cardElevation="10.0dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/InfoView">
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/pullToRefresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/respond_sms_preview_heading_txtview"
                        android:layout_width="wrap_content"
                        android:layout_height="35.0dip"
                        android:layout_marginStart="5.0dip"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginTop="5.0dip"
                        android:text="@string/respond_received_sarcall_sms_heading"
                        android:textSize="25.0sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.0dip"
                        android:layout_marginStart="15.0dip"
                        android:layout_marginEnd="15.0dip"
                        android:background="@color/divider"
                        app:layout_constraintEnd_toEndOf="@id/respond_sms_preview_scrollview"
                        app:layout_constraintStart_toStartOf="@id/respond_sms_preview_heading_txtview"
                        app:layout_constraintTop_toBottomOf="@id/respond_sms_preview_heading_txtview" />

                    <androidx.core.widget.NestedScrollView
                        android:id="@+id/respond_sms_preview_scrollview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginTop="45.0dip"
                        android:layout_marginRight="5.0dip"
                        android:layout_marginBottom="30.0dip"
                        android:fadeScrollbars="false"
                        android:scrollbars="vertical"
                        app:layout_constraintStart_toStartOf="@id/respond_sms_preview_heading_txtview"
                        app:layout_constraintTop_toBottomOf="@id/respond_sms_preview_heading_txtview">
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ProgressBar
                                android:id="@+id/respond_sms_loading_bar"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:visibility="visible"/>
                            <TextView
                                android:id="@+id/respond_sms_preview_txtview"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/placeholder_text"
                                android:textSize="20.0sp"
                                android:visibility="gone"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.core.widget.NestedScrollView>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_marginStart="15.0sp"
                        android:layout_marginLeft="15.0sp"
                        android:layout_marginTop="5.0dip"
                        android:layout_marginEnd="15.0dip"
                        android:layout_marginRight="15.0dip"
                        android:background="@color/divider"
                        app:layout_constraintEnd_toEndOf="@id/respond_sms_preview_scrollview"
                        app:layout_constraintStart_toStartOf="@id/respond_sms_preview_scrollview"
                        app:layout_constraintTop_toBottomOf="@id/respond_sms_preview_scrollview" />

                    <TextView
                        android:id="@+id/respond_preview_date_txtview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5.0dip"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginTop="8.0dip"
                        android:text="@string/response_date_received"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        app:layout_constraintStart_toStartOf="@id/respond_sms_preview_scrollview"
                        app:layout_constraintTop_toBottomOf="@id/respond_sms_preview_scrollview" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/respond_sar_a_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30.0dip"
            android:layout_marginLeft="30.0dip"
            android:layout_marginTop="32.0dip"
            android:layout_marginEnd="30.0dip"
            android:layout_marginRight="30.0dip"
            android:paddingTop="15.0dip"
            android:paddingBottom="15.0dip"
            android:text="@string/response_attending_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/respond_sms_preview_cardview" />

        <Button
            android:id="@+id/respond_sar_l_button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginStart="30.0dip"
            android:layout_marginLeft="30.0dip"
            android:layout_marginTop="35.0dip"
            android:layout_marginEnd="15.0dip"
            android:layout_marginRight="15.0dip"
            android:paddingTop="15.0dip"
            android:paddingBottom="15.0dip"
            android:text="@string/response_late_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/respond_sar_a_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/respond_sar_n_button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginStart="15.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="35.0dip"
            android:layout_marginEnd="30.0dip"
            android:layout_marginRight="30.0dip"
            android:paddingTop="15.0dip"
            android:paddingBottom="15.0dip"
            android:text="@string/response_unavailable_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/respond_sar_a_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>